# GITuck

./: CMakeLists.txt  GITuck.sh  README.md
sources/: main.cpp
